edit p-input and p-select disabled color and background-color. fix horizontal scroll on linux edge in the studio page. edit p-input-group-addon styles.

--- a/src/app/ui/pages/studio/studio-page.component.scss
+++ b/src/app/ui/pages/studio/studio-page.component.scss
@@ -1,7 +1,7 @@
 @use 'abstract.extracts' as app;
 
 :host {
-  @apply block -m-6;
+  @apply block -m-6 overflow-x-hidden;
   height: calc(100% + 3rem);
 }
 
